@@ -29,7 +29,7 @@ gcc (GCC) 8.1.1 20180626 (Red Hat 8.1.1-4)
   27566	   3248	   1136	  31950	   7cce	tvguid16
   30696	  16652	     16	  47364	   b904	tvlife
   19900	   1908	      4	  21812	   5534	validator
-  26844	   2056	   5432	  34332	   861c	tvhc
+  26269	   2040	   4856	  33165	   818d	tvhc
  549597	  47136	  20904	 617637	  96ca5	libtvision.so.0.0.8
 
 
@@ -68,7 +68,7 @@ gcc (GCC) 8.1.1 20180626 (Red Hat 8.1.1-4)
   23624	   2724	   1160	  27508	   6b74	tvguid16
   28249	  16636	     16	  44901	   af65	tvlife
   16838	   1860	      4	  18702	   490e	validator
-  21831	   1976	   5360	  29167	   71ef	tvhc
+  21264	   1960	   4784	  28008	   6d68	tvhc
  526528	  43680	  20680	 590888	  90428	libtvision.so.0.0.8
 
 
@@ -107,7 +107,7 @@ gcc (GCC) 8.1.1 20180626 (Red Hat 8.1.1-4)
   23015	   2776	   1136	  26927	   692f	tvguid16
   27185	  16652	     16	  43853	   ab4d	tvlife
   17453	   1932	      4	  19389	   4bbd	validator
-  24150	   2528	   5432	  32110	   7d6e	tvhc
+  23615	   2512	   4856	  30983	   7907	tvhc
  502334	  47592	  20904	 570830	  8b5ce	libtvision.so.0.0.8
 
 
@@ -146,7 +146,7 @@ gcc (GCC) 8.1.1 20180626 (Red Hat 8.1.1-4)
   21777	   2732	   1128	  25637	   6425	tvguid16
   25476	  16628	     16	  42120	   a488	tvlife
   16199	   1900	      4	  18103	   46b7	validator
-  18804	   1696	   5360	  25860	   6504	tvhc
+  18277	   1680	   4784	  24741	   60a5	tvhc
  466593	  43648	  20704	 530945	  81a01	libtvision.so.0.0.8
 
 
@@ -185,7 +185,7 @@ gcc (GCC) 8.1.1 20180626 (Red Hat 8.1.1-4)
   20042	   2404	   1128	  23574	   5c16	tvguid16
   23126	  16284	     16	  39426	   9a02	tvlife
   14547	   1580	      4	  16131	   3f03	validator
-  16931	   1128	   5360	  23419	   5b7b	tvhc
+  16396	   1112	   4784	  22292	   5714	tvhc
  426015	  40088	  20712	 486815	  76d9f	libtvision.so.0.0.8
 
 
